# eleanora

./: README.md
demo/: a.fasta  b.fasta  run.sh
imgs/: logo.xcf
src/: CMakeLists.txt  Makefile.linux  common.c  eleanora-visual.c  msg.c  param.h  parser.c  parser.h
